--- a/assignment2/Cone.html
+++ b/assignment2/Cone.html
@@ -2,7 +2,7 @@
 <head>
     <script type="text/javascript" src="initShaders.js"></script>
     <script type="text/javascript" src="Cone.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="justin.js"></script>
 
     <script id="Cone-vertex-shader" type="x-shader/x-vertex">#version 300 es
         in vec4 aPosition;
